--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -819,7 +819,6 @@
   border-radius: 20px;
   border: 5px solid var(--border-color);
   flex: 2 1 0%;
-  padding: 53px 30px 39px 31px;
 }
 
 .comparison__content-wrapper {
@@ -875,7 +874,7 @@
   .comparison__content-wrapper-card
   .comparison__content-wrapper-card-description
   .comparison__content-wrapper-card-description-subtitle {
-  font-weight: 500;
+  font-weight: 600;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-s);
   color: var(--card-text-color);
@@ -886,15 +885,14 @@
   border-radius: 6px;
   border: 1px solid var(--button-border-color-dark);
   box-shadow: inset 0px -4.35724px 0px var(--button-border-color);
-  color: var(--text-color);
-  color: var(--background-color);
+  color: var(--text-color-light);
   display: flex;
   font-family: var(--font-family-code);
   font-feature-settings: 'salt' on;
   font-size: var(--font-size-h7);
-  font-weight: 500;
+  font-weight: 600;
   gap: 13px;
-  line-height: var(--line-height-33);
+  line-height: var(--line-height-h7);
   padding: 12px 20px;
   text-decoration: none;
   width: -webkit-max-content;
@@ -903,9 +901,9 @@
 }
 
 .comparison__content-wrapper-button:hover {
-  background: var(--button-background-color-accent);
-  border: 1px solid var(--button-border-accent-color);
-  box-shadow: inset 0 -4px 0 var(--button-border-accent-color);
+  background: var(--button-background-color-light);
+  border: 1px solid var(--button-border-color);
+  box-shadow: inset 0 -4px 0 var(--button-border-color);
   color: var(--text-color);
   cursor: pointer;
   transition: 0.3s ease-in-out;
