--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -957,24 +957,36 @@
   padding: 34px 12px 42px 28px;
 }
 
+.testimonial__content-card-twitter-handle {
+  display: flex;
+  align-content: center;
+  gap: 10px;
+  font-weight: 600;
+  font-size: initial;
+  /* TODO: change it to variable */
+  line-height: calc(24 / 16);
+  text-decoration-line: underline;
+  color: var(--text-color);
+}
+
 .testimonial__content-card-description {
   font-weight: 600;
-  font-size: var(--font-size-h7);
-  line-height: var(--line-height-h7-s);
+  font-size: var(--font-size-testimonial);
+  line-height: var(--line-height-testimonial);
   font-style: italic;
   color: var(--card-text-color);
 }
 
 .testimonial__content-card-description::before {
   content: open-quote;
-  font-size: var(--font-size-h7);
-  line-height: var(--line-height-h7-s);
+  font-size: var(--font-size-testimonial);
+  line-height: var(--line-height-testimonial);
 }
 
 .testimonial__content-card-description::after {
   content: close-quote;
-  font-size: var(--font-size-h7);
-  line-height: var(--line-height-h7-s);
+  font-size: var(--font-size-testimonial);
+  line-height: var(--line-height-testimonial);
 }
 
 .testimonial__content-card-author {
@@ -997,7 +1009,7 @@
 }
 
 .testimonial__content-card-author-name .testimonial__content-card-author-name-subtitle {
-  font-weight: 500;
+  font-weight: 600;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-xs);
   color: var(--card-text-color);
@@ -1073,7 +1085,6 @@
 }
 
 .integration__content-card-image {
-  width: 51px;
   height: 51px;
 }
 
@@ -1083,9 +1094,10 @@
 }
 
 .integration__content-card-title {
-  font-weight: 700;
+  font-weight: 600;
   font-size: initial;
-  line-height: var(--line-height-23);
+  /* TODO: covert into var */
+  line-height: calc(24 / 16);
   text-align: center;
   color: var(--text-color);
 }
