fix: visual bug in testimonial

--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -959,7 +959,7 @@
 
 .testimonial__content-card-twitter-handle {
   display: flex;
-  align-content: center;
+  align-items: center;
   gap: 10px;
   font-weight: 600;
   font-size: initial;
