--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -1074,7 +1074,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   flex: 1 0 183px;
   background: var(--background-color);
   border: 2px solid var(--card-border-color);
@@ -1084,6 +1083,7 @@
   min-height: 126px;
   justify-content: center;
   gap: 12px;
+  text-decoration: none;
 }
 
 .integration__content-card-image {
@@ -1118,7 +1118,7 @@
 
 /* Open Source section start */
 .open-source {
-  margin-bottom: 120px;
+  margin-bottom: 80px;
   margin-left: auto;
   margin-right: auto;
   max-width: var(--layout-content-width);
@@ -1184,7 +1184,7 @@
 }
 
 .open-source-content-card-text--paragraph {
-  font-weight: 500;
+  font-weight: 600;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-xs);
   color: var(--card-text-color);
@@ -1209,6 +1209,10 @@
   z-index: 1;
 }
 
+.call-to-action-image {
+  flex: 1;
+}
+
 .call-to-action-image > svg {
   width: 100%;
   height: 100%;
@@ -1218,6 +1222,7 @@
   display: flex;
   flex-direction: column;
   gap: 43px;
+  flex: 2;
 }
 
 .call-to-action-content-wrapper .call-to-action-content--heading {
@@ -1229,7 +1234,7 @@
 }
 
 .call-to-action-content-wrapper .call-to-action-content--paragraph {
-  font-weight: 500;
+  font-weight: 600;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-s);
   color: var(--card-text-color);
@@ -1258,16 +1263,16 @@
   font-family: var(--font-family-code);
   font-size: var(--font-size-h7-mega);
   font-weight: 400;
-  line-height: var(--line-height-27);
+  line-height: var(--line-height-h7-mega);
 }
 
 .call-to-action-content-action-copy-command-text::before {
   color: var(--text-color-accent);
   content: '$';
   font-size: inherit;
-  font-weight: 400;
-  line-height: var(--line-height-30);
-  padding-right: 16px;
+  font-weight: 700;
+  line-height: inherit;
+  padding-right: 12px;
 }
 
 .call-to-action-content-action-copy-command-button {
@@ -1275,11 +1280,11 @@
   border-radius: 6px;
   border: 2px solid var(--button-border-color-dark);
   box-shadow: inset 0 -4px 0 var(--button-border-color);
-  color: var(--background-color);
+  color: var(--text-color-light);
   font-family: var(--font-family-code);
   font-size: var(--font-size-h7);
-  font-weight: 500;
-  line-height: var(--line-height-33);
+  font-weight: 600;
+  line-height: var(    --line-height-h7-s);
   padding: 12px 50px;
   position: absolute;
   right: -9px;
@@ -1287,9 +1292,9 @@
 }
 
 .call-to-action-content-action-copy-command-button:hover {
-  background: var(--button-background-color-accent);
-  border: 2px solid var(--button-border-accent-color);
-  box-shadow: inset 0 -4px 0 var(--button-border-accent-color);
+  background: var(--button-background-color-light);
+  border: 2px solid var(--button-border-color);
+  box-shadow: inset 0 -4px 0 var(--button-border-color);
   color: var(--text-color);
   cursor: pointer;
   transition: 0.3s ease-in-out;
@@ -1300,22 +1305,22 @@
   background: var(--button-background-color-light);
   border-radius: 6px;
   border: 1px solid var(--button-border-color-dark);
-  box-shadow: inset 0 -4px 0 var(--button-box-shadow-color);
+  box-shadow: inset 0 -4px 0 var(--button-box-shadow);
   color: var(--text-color);
   font-family: var(--font-family-code);
   font-feature-settings: 'salt' on;
   font-size: var(--font-size-h7);
-  font-weight: 500;
-  line-height: var(--line-height-33);
+  font-weight: 600;
+  line-height: var(--line-height-h7-s);
   padding: 12px 20px;
   text-decoration: none;
 }
 
 .call-to-action-content-action-button--get-started:hover {
-  background: var(--button-background-color-accent);
-  border: 1px solid var(--button-border-accent-color);
-  box-shadow: inset 0 -4px 0 var(--button-border-accent-color);
-  color: var(--text-color);
+  background: var(--button-background-color-dark);
+  border: 1px solid var(--button-border-color);
+  box-shadow: inset 0 -4px 0 var(--button-border-color);
+  color: var(--text-color-light);
   cursor: pointer;
   transition: 0.4s ease-in-out;
   will-change: background, color, border, box-shadow;
