--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   background: var(--header-background);
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   /* TODO: remove z-index and fix natively */
@@ -55,7 +56,7 @@
   text-underline-offset: 4px;
 }
 
-.navigation-list > li > a svg {
+.navigation-list>li>a svg {
   width: 30px;
   height: 100%;
   fill: var(--background-color);
@@ -66,7 +67,7 @@
   padding-left: 52px;
 }
 
-#docsearch > svg {
+#docsearch>svg {
   width: 24px;
   height: 24px;
   stroke-width: 1.6;
@@ -94,15 +95,16 @@
   height: 24px;
 }
 
-#docsearch button .DocSearch-Button-Container > svg {
+#docsearch button .DocSearch-Button-Container>svg {
   --docsearch-text-color: var(--background-color);
   width: 100%;
   height: 100%;
 }
 
-#docsearch > button:hover {
+#docsearch>button:hover {
   box-shadow: unset;
 }
+
 /* Navigation section end */
 
 /* Hero Section start */
@@ -219,7 +221,7 @@
   box-shadow: inset 0 -4px 0 var(--button-box-shadow);
   color: var(--text-color);
   font-family: var(--font-family-code);
-  font-feature-settings: 'salt' on;
+  font-feature-settings: 'salt'on;
   font-size: var(--font-size-h7);
   font-weight: 600;
   line-height: var(--line-height-h7);
@@ -333,6 +335,7 @@
   line-height: var(--line-height-h7-xs);
   text-align: center;
 }
+
 /* Hero Section end */
 
 /* Nightwatch Feature section start */
@@ -433,12 +436,12 @@
   margin-bottom: calc(var(--font-size-h5) / 2);
 }
 
-.features__content-wrapper-description-list-item > strong {
+.features__content-wrapper-description-list-item>strong {
   font-weight: 700;
   color: var(--text-color);
 }
 
-.features__content-wrapper-description-list-item > strong::after {
+.features__content-wrapper-description-list-item>strong::after {
   content: ': ';
 }
 
@@ -539,7 +542,7 @@
   line-height: var(--line-height-h7);
 }
 
-.capabilities--single-column .capabilities__card .capabilities__card-text-list-item > strong::after {
+.capabilities--single-column .capabilities__card .capabilities__card-text-list-item>strong::after {
   content: ': ';
 }
 
@@ -552,7 +555,7 @@
   color: var(--text-color-light);
   display: flex;
   font-family: var(--font-family-code);
-  font-feature-settings: 'salt' on;
+  font-feature-settings: 'salt'on;
   font-size: var(--font-size-h7);
   font-weight: 600;
   gap: 13px;
@@ -632,7 +635,7 @@
   line-height: var(--line-height-h7);
 }
 
-.capabilities--double-column .capabilities__card .capabilities__card-text-list-item > strong::after {
+.capabilities--double-column .capabilities__card .capabilities__card-text-list-item>strong::after {
   content: ': ';
 }
 
@@ -645,7 +648,7 @@
   color: var(--text-color-light);
   display: flex;
   font-family: var(--font-family-code);
-  font-feature-settings: 'salt' on;
+  font-feature-settings: 'salt'on;
   font-size: var(--font-size-h7);
   font-weight: 600;
   gap: 13px;
@@ -750,7 +753,7 @@
   color: var(--text-color-light);
   display: flex;
   font-family: var(--font-family-code);
-  font-feature-settings: 'salt' on;
+  font-feature-settings: 'salt'on;
   font-size: var(--font-size-h7);
   font-weight: 600;
   gap: 13px;
@@ -783,6 +786,7 @@
   width: 100%;
   margin: auto;
 }
+
 /* Nightwatch Performance section end */
 
 /* Nightwatch Comparison section start */
@@ -842,40 +846,26 @@
   gap: 24px;
 }
 
-.comparison__content-wrapper
-  .comparison__content-wrapper-container
-  .comparison__content-wrapper-card
-  .comparison__content-wrapper-card-image {
+.comparison__content-wrapper .comparison__content-wrapper-container .comparison__content-wrapper-card .comparison__content-wrapper-card-image {
   max-width: 100%;
   flex: 1 0 0%;
 }
 
-.comparison__content-wrapper
-  .comparison__content-wrapper-container
-  .comparison__content-wrapper-card
-  .comparison__content-wrapper-card-description {
+.comparison__content-wrapper .comparison__content-wrapper-container .comparison__content-wrapper-card .comparison__content-wrapper-card-description {
   display: flex;
   flex-direction: column;
   gap: 8px;
   flex: 5 0 0%;
 }
 
-.comparison__content-wrapper
-  .comparison__content-wrapper-container
-  .comparison__content-wrapper-card
-  .comparison__content-wrapper-card-description
-  .comparison__content-wrapper-card-description-title {
+.comparison__content-wrapper .comparison__content-wrapper-container .comparison__content-wrapper-card .comparison__content-wrapper-card-description .comparison__content-wrapper-card-description-title {
   font-weight: 700;
   font-size: var(--font-size-h6);
   line-height: var(--line-height-h6);
   color: var(--text-color);
 }
 
-.comparison__content-wrapper
-  .comparison__content-wrapper-container
-  .comparison__content-wrapper-card
-  .comparison__content-wrapper-card-description
-  .comparison__content-wrapper-card-description-subtitle {
+.comparison__content-wrapper .comparison__content-wrapper-container .comparison__content-wrapper-card .comparison__content-wrapper-card-description .comparison__content-wrapper-card-description-subtitle {
   font-weight: 600;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-s);
@@ -890,7 +880,7 @@
   color: var(--text-color-light);
   display: flex;
   font-family: var(--font-family-code);
-  font-feature-settings: 'salt' on;
+  font-feature-settings: 'salt'on;
   font-size: var(--font-size-h7);
   font-weight: 600;
   gap: 13px;
@@ -967,6 +957,7 @@
   font-size: initial;
   /* TODO: change it to variable */
   line-height: calc(24 / 16);
+  -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
   color: var(--text-color);
 }
@@ -1114,6 +1105,7 @@
   width: 100%;
   margin: auto;
 }
+
 /* Nightwatch Integrations section end */
 
 /* Open Source section start */
@@ -1165,7 +1157,7 @@
   height: 52px;
 }
 
-.open-source-content-card-image > svg {
+.open-source-content-card-image>svg {
   width: 100%;
   height: 100%;
 }
@@ -1213,7 +1205,7 @@
   flex: 1;
 }
 
-.call-to-action-image > svg {
+.call-to-action-image>svg {
   width: 100%;
   height: 100%;
 }
@@ -1284,7 +1276,7 @@
   font-family: var(--font-family-code);
   font-size: var(--font-size-h7);
   font-weight: 600;
-  line-height: var(    --line-height-h7-s);
+  line-height: var(--line-height-h7-s);
   padding: 12px 50px;
   position: absolute;
   right: -9px;
@@ -1308,7 +1300,7 @@
   box-shadow: inset 0 -4px 0 var(--button-box-shadow);
   color: var(--text-color);
   font-family: var(--font-family-code);
-  font-feature-settings: 'salt' on;
+  font-feature-settings: 'salt'on;
   font-size: var(--font-size-h7);
   font-weight: 600;
   line-height: var(--line-height-h7-s);
@@ -1358,20 +1350,20 @@
   flex: 2.4 1 auto;
 }
 
-.footer__wrapper-inner-menu > ul {
+.footer__wrapper-inner-menu>ul {
   display: flex;
   justify-content: space-between;
   list-style: none;
   padding: 0;
 }
 
-.footer__wrapper-inner-menu > ul > li {
+.footer__wrapper-inner-menu>ul>li {
   display: block;
   margin: 0;
   padding: 0;
 }
 
-.footer__wrapper-inner-menu > ul > li > .footer__wrapper-inner-menu-separator {
+.footer__wrapper-inner-menu>ul>li>.footer__wrapper-inner-menu-separator {
   font-weight: 600;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-xs);
@@ -1381,12 +1373,12 @@
   margin-bottom: 19px;
 }
 
-.footer__wrapper-inner-menu > ul > li > ul {
+.footer__wrapper-inner-menu>ul>li>ul {
   list-style: none;
   padding: 0;
 }
 
-.footer__wrapper-inner-menu > ul > li > ul > li a {
+.footer__wrapper-inner-menu>ul>li>ul>li a {
   font-weight: 600;
   font-size: initial;
   /* TODO: replace with var */
@@ -1397,7 +1389,7 @@
   opacity: 0.9;
 }
 
-.footer__wrapper-inner-menu > ul > li > ul > li a:hover {
+.footer__wrapper-inner-menu>ul>li>ul>li a:hover {
   text-decoration: underline;
 }
 
@@ -1496,7 +1488,7 @@
   box-shadow: inset 0px -3.28005px 0px var(--button-border-color);
   color: var(--background-color);
   font-family: var(--font-family-code);
-  font-feature-settings: 'salt' on;
+  font-feature-settings: 'salt'on;
   font-size: var(--font-size-h8);
   font-weight: 600;
   line-height: calc(33 / 14);
@@ -1556,4 +1548,5 @@
 .footer__wrapper-bottom-text-about {
   padding-bottom: 32px;
 }
+
 /* Footer section end */
