--- a/src/includes/footer.ejs
+++ b/src/includes/footer.ejs
@@ -164,7 +164,7 @@
         </div>
         <div class="footer__wrapper-inner-social-links">
           <a href="https://github.com/nightwatchjs/nightwatch" target="_blank">
-            <svg role="img" aria-hidden="true" viewBox="0 0 16 16" version="1.1"
+            <svg role="img" viewBox="0 0 16 16" version="1.1"
               shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
               <title>GitHub</title>
               <path
