--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -132,7 +132,7 @@
           </div>
         </li>
         <li><a href="https://github.com/nightwatchjs/" target="_blank" rel="noopener noreferrer" class="navigation-link">
-            <svg role="img" aria-hidden="true" viewBox="0 0 16 16" version="1.1" shape-rendering="geometricPrecision"
+            <svg role="img" viewBox="0 0 16 16" version="1.1" shape-rendering="geometricPrecision"
               text-rendering="geometricPrecision">
               <title>GitHub</title>
               <path
