chore: address accessibility feedback

--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -1,4 +1,8 @@
-<% function activeLink(urlPart) { return page.url.includes(urlPart) ? 'active' : '' ; } %>
+<%
+  function activeLink(urlPart) {
+    return page.url.includes(urlPart) ? 'active' : '';
+  }
+%>
 
   <!-- Navbar start -->
   <header class="header" id="header">
