--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -1969,7 +1969,7 @@ function activeLink(urlPart) {
                   <svg role="img" width="49" height="39" viewBox="0 0 49 39" fill="none"
                     xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                     text-rendering="geometricPrecision">
-                    <title>Icon showing globe with text W3C</title>
+                    <title>Icon showing W3C compliance</title>
                     <circle cx="19" cy="19.9429" r="18" stroke="#333333" stroke-width="2" />
                     <path
                       d="M28.0875 19.9429C28.0875 25.0593 26.9843 29.6418 25.2496 32.909C23.4916 36.2201 21.2339 37.9429 18.9997 37.9429C16.7654 37.9429 14.5078 36.2201 12.7497 32.909C11.0151 29.6418 9.91187 25.0593 9.91187 19.9429C9.91187 14.8264 11.0151 10.2439 12.7497 6.97678C14.5078 3.66561 16.7654 1.94287 18.9997 1.94287C21.2339 1.94287 23.4916 3.66561 25.2496 6.97678C26.9843 10.2439 28.0875 14.8264 28.0875 19.9429Z"
@@ -2126,7 +2126,7 @@ function activeLink(urlPart) {
               <div class="integration__content-card-image">
                 <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 191.99999"
                   shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
-                  <title>Mocha - the fun, simple, flexible JavaScript test framework</title>
+                  <title>Mocha logo</title>
                   <path
                     d="M169.47386 143.90113l-68.70282 39.69498c-2.958045 1.71756-6.584028 1.71756-9.542066 0L22.52614 143.90113c-2.958038-1.71757-4.77103-4.86645-4.77103-8.20617V56.305021c0-3.435142 1.812992-6.488601 4.77103-8.206172L91.228974 8.403878c2.958038-1.717571 6.584021-1.717571 9.542056 0l68.70282 39.694971c2.95804 1.717571 4.77104 4.866451 4.77104 8.206172v79.389939c-.0954 3.33972-1.90842 6.4886-4.77104 8.20617z"
                     clip-rule="evenodd" fill="#8d6748" fill-rule="evenodd" />
@@ -2155,7 +2155,7 @@ function activeLink(urlPart) {
               <div class="integration__content-card-image">
                 <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 41.78 50" class="ml-3 ml-md-0"
                   shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
-                  <title>Cucumber.js</title>
+                  <title>Cucumber.js logo</title>
                   <defs>
                     <style>
                       .b {
@@ -2198,7 +2198,7 @@ function activeLink(urlPart) {
               <div class="integration__content-card-image">
                 <svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="-178.3 659.6 1000 700"
                   shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
-                  <title>AVA is a test runner for Node.js</title>
+                  <title>AVA logo</title>
                   <path
                     d="M101.7 798.9c9.8 6.1 16.7 13.6 20.8 22.3 6.1 14 12.9 29.2 20.3 45.7 7.4 16.5 14.9 33.2 22.3 50.1s14.6 33.4 21.4 49.4c6.8 16 13 30.7 18.4 44 5.4 13.3 9.7 24.6 12.9 33.9 3.2 9.3 4.8 15.5 4.8 18.4 0 5-.7 9.8-2 14.6-1.3 4.8-3.7 9.2-7.2 13.1-3.5 3.9-8.4 7.1-14.6 9.4-6.3 2.3-14.4 3.5-24.3 3.5-10.5 0-19-1.4-25.6-4.2-6.6-2.8-12-6.3-16.4-10.7-4.4-4.4-8-9-10.9-13.8-2.9-4.8-5.9-9.4-9-13.8-3.1-4.4-6.6-7.9-10.5-10.7-3.9-2.8-9.3-4.2-16-4.2h-28c-8.2 0-14.6 1.4-19.5 4.2-4.8 2.8-8.7 6.3-11.8 10.7-3.1 4.4-5.9 9-8.5 13.8-2.6 4.8-6 9.4-10.1 13.8s-9.4 7.9-16 10.7c-6.6 2.8-15.4 4.2-26.5 4.2-16.3 0-28.3-3.6-35.9-10.9-7.6-7.3-11.4-15.9-11.4-25.8 0-3.8 1.5-10.4 4.6-19.9 3.1-9.5 7.2-20.8 12.5-33.9C-59 999.6-53 985.1-46.3 969c6.7-16 13.8-32.6 21.4-49.6 7.6-17.1 15.2-34.1 22.7-51.2 7.6-17.1 14.9-33.5 21.9-49.2 4.1-9 10.9-16.2 20.3-21.4 9.5-5.2 20-7.9 31.7-7.9 10.2 0 20.2 3.1 30 9.2zm353.7 1.5c7.6 6.9 11.4 15.7 11.4 26.5 0 6.1-1.5 14.1-4.6 24.1-3.1 9.9-7 21.1-11.8 33.7-4.8 12.5-10.4 26.1-16.6 40.7-6.3 14.6-12.6 29.4-19 44.6-8.7 20.7-16.3 39.3-22.5 55.8-6.3 16.5-12.7 30.5-19.2 42-6.6 11.5-13.7 20.4-21.4 26.7-7.7 6.3-17.3 9.4-28.6 9.4-11.7 0-21.4-2.5-29.1-7.7-7.7-5.1-14.7-12.8-21-23.2-6.3-10.3-12.4-23.4-18.4-39.1-6-15.7-13-34.4-21.2-56-6.1-16.3-12.4-32.3-18.8-47.9-6.4-15.6-12.2-30-17.5-43.1-5.2-13.1-9.5-24.9-12.9-35.2-3.3-10.3-5-18.4-5-24.3 0-13.4 4.5-23 13.6-28.9 9-5.8 20.3-8.7 33.7-8.7 12.2 0 21.8 1.5 28.6 4.6 6.8 3.1 12.8 7.1 17.7 12 3.5 3.5 7 8.6 10.5 15.3 3.5 6.7 6.8 14.1 9.8 22.1 3.1 8 6.1 16.1 9.2 24.3 3.1 8.2 5.9 15.7 8.5 22.5 2.6 6.9 5.2 12.4 7.7 16.6 2.5 4.2 4.7 6.3 6.8 6.3 2.3 0 4.7-2.1 7.2-6.3 2.5-4.2 5-9.7 7.7-16.4 2.6-6.7 5.3-14.1 8.1-22.1 2.8-8 5.7-16 8.7-23.8s6.3-15.1 9.6-21.6c3.3-6.6 6.8-11.6 10.3-15.1 3.2-3.2 6.3-5.9 9.4-8.1 3.1-2.2 6.4-4 10.1-5.5 3.6-1.5 7.8-2.5 12.5-3.3 4.7-.7 10.3-1.1 17.1-1.1 11.9 0 21.8 3.4 29.4 10.2zm148.5-1.5c9.8 6.1 16.7 13.6 20.8 22.3 6.1 14 12.9 29.2 20.3 45.7 7.4 16.5 14.9 33.2 22.3 50.1s14.6 33.4 21.4 49.4c6.8 16 13 30.7 18.4 44 5.4 13.3 9.7 24.6 12.9 33.9 3.2 9.3 4.8 15.5 4.8 18.4 0 5-.7 9.8-2 14.6-1.3 4.8-3.7 9.2-7.2 13.1-3.5 3.9-8.4 7.1-14.6 9.4-6.3 2.3-14.4 3.5-24.3 3.5-10.5 0-19-1.4-25.6-4.2-6.6-2.8-12-6.3-16.4-10.7-4.4-4.4-8-9-10.9-13.8-2.9-4.8-5.9-9.4-9-13.8-3.1-4.4-6.6-7.9-10.5-10.7-3.9-2.8-9.3-4.2-16-4.2h-28c-8.2 0-14.6 1.4-19.5 4.2-4.8 2.8-8.7 6.3-11.8 10.7-3.1 4.4-5.9 9-8.5 13.8-2.6 4.8-6 9.4-10.1 13.8s-9.4 7.9-16 10.7c-6.6 2.8-15.4 4.2-26.5 4.2-16.3 0-28.3-3.6-35.9-10.9-7.6-7.3-11.4-15.9-11.4-25.8 0-3.8 1.5-10.4 4.6-19.9 3.1-9.5 7.2-20.8 12.5-33.9 5.2-13.1 11.2-27.7 17.9-43.7 6.7-16 13.8-32.6 21.4-49.6 7.6-17.1 15.2-34.1 22.7-51.2 7.6-17.1 14.9-33.5 21.9-49.2 4.1-9 10.9-16.2 20.3-21.4 9.5-5.2 20-7.9 31.7-7.9 10.5-.1 20.5 3 30.3 9.1z"
                     fill="#4B4B77" />
@@ -2216,7 +2216,7 @@ function activeLink(urlPart) {
               <div class="integration__content-card-image">
                 <svg role="img" xmlns="http://www.w3.org/2000/svg" id="Layer_1" x="0" y="0" viewBox="0 0 600 600"
                   shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
-                  <title>Jest is a delightful JavaScript Testing Framework with a focus on simplicity.</title>
+                  <title>Jest logo</title>
                   <path fill="#C21325" stroke="#FFF" stroke-width="20"
                     d="M 465.391 381.102 C 464.851 381.43 447.042 378.442 424.726 376.931 C 406.501 375.696 385.27 375.743 367.982 376.914 C 353.963 377.863 335.544 370.816 333.343 379.191 C 325.105 410.542 307.38 437.846 284.832 459.119 C 267.869 475.122 248.455 487.257 227.457 494.734 C 202.458 481.892 190.652 453.33 201.305 428.287 C 209.754 408.424 219.585 386.547 201.435 381.542 C 188.222 377.898 180.967 390.555 175.888 404.087 C 166.158 430.01 147.669 456.835 142.4 488.608 C 136.838 522.15 142.382 557.755 171.392 577.861 C 238.954 624.687 312.292 548.833 389.617 529.765 C 417.641 522.854 448.402 523.968 473.092 509.668 C 491.633 498.929 503.856 481.133 507.325 461.152 C 512.905 429.015 496.186 397.086 465.391 381.102 Z" />
                   <path fill="none" stroke="#FFF" stroke-width="20"
@@ -2242,7 +2242,7 @@ function activeLink(urlPart) {
                 <svg role="img" width="61" height="60" viewBox="0 0 61 60" fill="none"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                   shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
-                  <title>JUnit Reporter</title>
+                  <title>JUnit5 logo</title>
                   <rect x="0.776001" width="60" height="60" fill="url(#pattern1junit)" />
                   <defs>
                     <pattern id="pattern1junit" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -2262,7 +2262,7 @@ function activeLink(urlPart) {
                 <svg role="img" width="61" height="60" viewBox="0 0 61 60" fill="none"
                   xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                   text-rendering="geometricPrecision">
-                  <title>HTML 5</title>
+                  <title>HTML 5 logo</title>
                   <path
                     d="M13.4791 0H16.1744V2.67188H18.6588V0H21.3541V8.08594H18.6588V5.39062H16.1979V8.08594H13.4791M24.9166 2.69531H22.5377V0H30.0026V2.69531H27.6119V8.08594H24.9166M31.1862 0H34.0104L35.7448 2.84766L37.4791 0H40.3033V8.08594H37.608V4.07812L35.7213 6.98438L33.8346 4.07812V8.08594H31.1862M41.6393 0H44.3346V5.41406H48.1549V8.08594H41.6393"
                     fill="black" />
@@ -2284,7 +2284,7 @@ function activeLink(urlPart) {
               <div class="integration__content-card-image">
                 <svg width="61" height="60" viewBox="0 0 61 60" fill="none" xmlns="http://www.w3.org/2000/svg"
                   shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
-                  <title>JSON Reporter</title>
+                  <title>JSON logo</title>
                   <g clip-path="url(#clip0_1828_31170)">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M30.7254 44.6625C43.9996 62.7581 56.9904 39.6116 56.9713 25.6924C56.9487 9.23511 40.2684 0.0371094 30.7145 0.0371094C15.38 0.0371094 0.776001 12.7106 0.776001 30.0506C0.776001 49.3241 17.516 60 30.7145 60C27.7278 59.5699 17.7748 57.4372 17.6409 34.5124C17.5509 19.0072 22.6989 12.8126 30.6928 15.5377C30.8718 15.6041 39.5105 19.0119 39.5105 30.1444C39.5105 41.2294 30.7254 44.6625 30.7254 44.6625Z"
@@ -2319,7 +2319,7 @@ function activeLink(urlPart) {
                 <svg role="img" width="61" height="60" viewBox="0 0 61 60" fill="none"
                   xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                   text-rendering="geometricPrecision">
-                  <title>Teamcity Reporter</title>
+                  <title>Teamcity logo</title>
                   <g clip-path="url(#clip0_1828_31142)">
                     <path
                       d="M34.8606 41.0571L29.632 11.9142C29.2892 9.85707 28.6035 7.79993 27.3177 5.8285C25.6035 3.08564 22.8606 1.19993 19.7749 0.428497C7.60345 -2.48579 -1.39655 9.68564 3.91774 20.4856L16.6035 47.6571C16.9463 48.5142 17.4606 49.3714 18.0606 50.1428C19.0892 51.5142 20.4606 52.5428 22.0892 53.0571C30.3177 55.6285 36.9177 48.3428 34.8606 41.0571Z"
@@ -2400,7 +2400,7 @@ function activeLink(urlPart) {
                 <svg role="img" width="60" height="60" viewBox="0 0 60 60" fill="none"
                   xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                   text-rendering="geometricPrecision">
-                  <title>Slack</title>
+                  <title>Slack logo</title>
                   <g clip-path="url(#clip0_1828_31112)">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M21.9987 0C18.682 0.00244648 15.9977 2.68868 16.0002 5.99878C15.9977 9.30887 18.6844 11.9951 22.0012 11.9976H28.0021V6.00122C28.0046 2.69113 25.3179 0.00489297 21.9987 0C22.0012 0 22.0012 0 21.9987 0M21.9987 16H6.00099C2.68427 16.0024 -0.00244468 18.6887 6.69932e-06 21.9988C-0.00489606 25.3089 2.68182 27.9951 5.99854 28H21.9987C25.3154 27.9976 28.0021 25.3113 27.9997 22.0012C28.0021 18.6887 25.3154 16.0024 21.9987 16Z"
@@ -2432,7 +2432,7 @@ function activeLink(urlPart) {
                 <svg role="img" width="61" height="60" viewBox="0 0 61 60" fill="none"
                   xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision"
                   text-rendering="geometricPrecision">
-                  <title>Azure</title>
+                  <title>Azure logo</title>
                   <path
                     d="M20.8787 4.08998H37.1525L20.2587 54.1444C20.0851 54.6587 19.7545 55.1056 19.3136 55.4223C18.8726 55.7389 18.3435 55.9092 17.8006 55.9094H5.1356C4.7243 55.9094 4.31889 55.8115 3.95292 55.6238C3.58695 55.4361 3.27094 55.1639 3.03103 54.8298C2.79112 54.4957 2.6342 54.1093 2.57327 53.7025C2.51233 53.2958 2.54912 52.8803 2.6806 52.4906L18.42 5.85498C18.5935 5.34042 18.9241 4.89327 19.3652 4.57653C19.8063 4.25978 20.3357 4.08939 20.8787 4.08936V4.08998Z"
                     fill="url(#paint0_linear_1885_32832)" />
