--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2944,6 +2944,7 @@ p.bottom-text {
   padding-bottom: 32px;
 }
 /* Footer section end */
+
 .header {
   display: flex;
   justify-content: center;
@@ -3007,6 +3008,58 @@ p.bottom-text {
 .navigation-list:last-child {
   gap: 32px;
   padding-left: 52px;
+}
+
+.navigation-list>li button {
+  font-weight: 700;
+  font-size: var(--font-size-h7);
+  line-height: var(--line-height-h7-xs);
+  color: var(--text-color-light);
+  background: transparent;
+  border: unset;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 11px;
+}
+
+.navigation-list .release-button-action {
+  position: relative;
+}
+
+.navigation-list>li [role="menu"] {
+  display: none;
+  position: absolute;
+  margin: 0;
+  background: var(--dropdown-background-color);
+  box-shadow: 3px 4px 7px 1px var(--dropdown-box-shadow-color);
+  border-radius: 10px;
+  padding: 21px 25px;
+  width: max-content;
+  left: -90px;
+  top: 45px;
+}
+
+.navigation-list>li [role="menu"] li:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.navigation-list>li>ul [role="menuitem"] {
+  display: block;
+  border-radius: 5px;
+}
+
+.navigation-list>li>ul [role="menuitem"] a {
+  font-weight: 600;
+  font-size: initial;
+  /* TODO: replace with var */
+  line-height: calc(19/16);
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.navigation-list>li>ul [role="menuitem"] a:hover {
+  text-decoration: underline;
 }
 
 #docsearch>svg {
