--- a/src/includes/scripts.ejs
+++ b/src/includes/scripts.ejs
@@ -21,6 +21,7 @@
 <%- include('docsearch') %>
 
 <script type="module" src="<%= url("~/src/js/app-esm.js") %>"></script>
+<script type="module" src="<%= url("~/src/js/dropdown.js") %>"></script>
 
 <script type="module">
   import {onRender} from 'postdoc/client';
