--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -2685,6 +2685,7 @@ function activeLink(urlPart) {
     <!-- Footer section end -->
 
     <%- include('utils') %>
+    <script type="module" src="<%= url("~/src/js/dropdown.js") %>"></script>
     <script src="/js/landing/script.js"></script>
   </body>
 
