--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -88,8 +88,8 @@
   display: none;
   position: absolute;
   margin: 0;
-  background: #FAFAFA;
-  box-shadow: 3px 4px 7px 1px rgba(0, 0, 0, 0.07);
+  background: var(--dropdown-background-color);
+  box-shadow: 3px 4px 7px 1px var(--dropdown-box-shadow-color);
   border-radius: 10px;
   padding: 21px 25px;
   width: max-content;
